--- a/src/css/main.css
+++ b/src/css/main.css
@@ -140,6 +140,7 @@ header {
     left: -700px;
     width: 1520px;
     height: 1425px;
+    box-shadow: inset -5px -5px #9c9c9c52;
 }
 
 #circle2 {
@@ -228,7 +229,8 @@ header {
     padding-top: 250px;
     grid-template-areas: 
     ". Title . Image ."
-    ". Text . . ."
+    ". Text . . .";
+    overflow: hidden;
 }
 
 #about-title {
@@ -287,7 +289,7 @@ header {
 
 #requirements {
     grid-area: requirements;
-    background-color: #d8cbb9ac;
+    background-color: #bdb4aa;
     
 }
 
@@ -514,14 +516,14 @@ header {
     opacity: 0;
     filter: blur(5px);
     transform: translate(-250px);
-    transition: all 1s;
+    transition: opacity 1s, filter 1s, transform 1s;
 }
 
 .hiddenAbout {
     opacity: 0;
     filter: blur(5px);
     transform: translateY(-200px);
-    transition: all 1s;
+    transition: opacity 1s, filter 1s, transform 1s;
 }
 
 .hiddenImage {
@@ -531,11 +533,46 @@ header {
     transition: opacity 1s, filter 1s, transform 1s;
 }
 
+.hiddenDownload {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(-200px);
+    transition: opacity 1s, filter 1s, transform 1s;
+}
+
+.hiddenCircleTop {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-200px);
+    transition: opacity 1s, filter 1s, transform 1s;
+}
+
+.hiddenCircleBottom {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(200px);
+    transition: opacity 1s, filter 1s, transform 1s;
+}
+
+.circleAppear {
+    opacity: 0.5;
+    filter: blur(0);
+    transform: translateX(0);
+    transform: translateY(0);
+}
+
 .appear {
     opacity: 100;
     filter: blur(0);
     transform: translateX(0);
     transform: translateY(0);
+}
+
+.appear::after {
+    opacity: 50%;
+    filter: blur(0);
+    transform: translateY(0);
+    transform: translateZ(-1);
 }
 
 @media (max-width: 1250px) {
@@ -581,7 +618,7 @@ header {
 
 @media (max-width: 800px) {
     #circle2 {
-        transform: translateX(-70%);
+        left: 0;
         height: 700px;
         
     }
@@ -598,6 +635,8 @@ header {
         right: -50px;
         width: 150px;
         height: 150px;
+        opacity: 0.5;
+        box-shadow: 3px 5px #9c9c9c98;
     }
 
     #circle5 {
@@ -654,11 +693,22 @@ header {
     #download-container {
         width: 95vw;
     }
+
+    #guide-section {
+        height: 700px;
+    }
+
     #guide-container {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 50px 1fr 50px;
+        grid-template-rows: 1fr 1fr 1fr;
 
         grid-template-areas: 
         ".  guideTitle . "
-        "setup setup run";
+        ". setup ."
+        ". run .";
+    }
+
+    .list > h1 {
+        text-align: center;
     }
 }
